# tpc_scraper

./: .env  .gitignore  README.md  alot_LM (2).csv  app.py  auth.json  branch_mapping.json  check_schema.py  cpi_vis.py  debug_db.py  final_check.py  login_and_save_session.py  main.py  process_data.py  pyproject.toml  requirements.txt  scrape_topics.py  verification_result.txt  verify_cpi_fix.py  verify_db.py
data/: placement.db  topics.json
data/raw_topics/: 001_UIDAI_FT_Interview_Shortlist.json  002_Edgefleet.ai_Test_shortist.json  003_Indigo_Off-Campus_Internship_Offers.json  004_Genpact_FT_Offers.json  005_Cubastion_Consulting_FT_GD_Shortlist.json  006_Willings-INC_Internship_Offer.json  007_Addverb_FT_Interview_Shortlist.json  008_Tredence_FT_Offers.json  009_Vishakha_Group_FT_Offers.json  010_Gspann_FT_Offers.json  011_Arrise_FT_Offers.json  012_Siemens_Energy_FT_Offers.json  013_CaterPillar_FT_Offers.json  014_NXP_FT_Offers.json  015_Citymall_FT_Offers.json  016_HPCL_FT_Offers.json  017_Comviva-YABX_FT_Offers.json  018_Adrosonic_FT_Offers.json  019_Vishakha_Group_FT_Interview_Shortlist.json  020_[UPDATED]_ZS_Off-campus_FT_Offers.json  021_[Updated]_Amdocs_FT_Offers.json  022_Tech_Mahindra_Internship_Offers.json  023_Dentsu_FT_Offers.json  024_Arrise_FT_Interview_Shortlist.json  025_HCLSoftware_FT_Offers.json  026_ISGEC_FT_Offers.json  027_Beehyv_FT_Offers.json  028_Nagarro_FT_Offers.json  029_HCL_Tech_FT_Offers.json  030_SRK_Techtronics_FT_Offers.json  031_Tavant_FT_Offers.json  032_FN_Mathlogic_FT_Offers.json  033_Larsen_&_Turbo_Constructions_FT_Offers.json  (+672 more)
