[project]
name = "tpc-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "tabulate>=0.9.0",
]
