[project]
name = "tpc-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "tabulate>=0.9.0",
]
